--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "env-cmd -f dev.env nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +16,8 @@
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   }
 }
